--- a/bootstrap/kind/flux/notification-provider.yaml
+++ b/bootstrap/kind/flux/notification-provider.yaml
@@ -23,8 +23,8 @@ spec:
     - kind: Kustomization
       name: control-plane-cluster
       namespace: flux-system
-  inclusionList:
-    - "^Reconciliation finished"
+  #inclusionList:
+  #  - "^Reconciliation finished"
   eventMetadata:
     cluster: "control-plane"
     location: "australia-southeast1-a"
