--- a/clusters/control-plane/crossplane-source.yaml
+++ b/clusters/control-plane/crossplane-source.yaml
@@ -65,7 +65,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: crossplane-functions
+  name: crossplane-functions-controlplane
   namespace: flux-system
 spec:
   interval: 10m
@@ -90,7 +90,7 @@ spec:
     kind: GitRepository
     name: crossplane-config
   dependsOn:
-    - name: crossplane-functions
+    - name: crossplane-functions-controlplane
   postBuild:
     substituteFrom:
       - kind: ConfigMap
