--- a/crossplane/providers/kustomization.yaml
+++ b/crossplane/providers/kustomization.yaml
@@ -1,4 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../../flux/
+  - providers.yaml
+  - functions.yaml
+  - providers-config.yaml
