--- a/flux/kustomization.yaml
+++ b/flux/kustomization.yaml
@@ -1,4 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../../flux/
+  - sources.yaml
+  - bootstrap.yaml
+  - notification-provider.yaml
