--- a/kubernetes/clusters/apps-dev/flux-system/gotk-sync.yaml
+++ b/kubernetes/clusters/apps-dev/flux-system/gotk-sync.yaml
@@ -20,7 +20,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./kubernetes/clusters/kind
+  path: ./bootstrap/kind/flux
   prune: true
   sourceRef:
     kind: GitRepository
