--- a/kubernetes/namespaces/base/crossplane-system/kustomization.yaml
+++ b/kubernetes/namespaces/base/crossplane-system/kustomization.yaml
@@ -1,12 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 resources:
   - compositions
   - environment-configs
   - functions
-  - platform-services
   - provider-configs
   - providers
-  - workload-clusters
-  - ai
-  - networking
+  - functions-kind
+  - providers-kind
+  - providerconfigs-kind
+  - install-kind
