--- a/kubernetes/namespaces/overlays/apps-dev/kustomization.yaml
+++ b/kubernetes/namespaces/overlays/apps-dev/kustomization.yaml
@@ -1,4 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-bases:
-  - ../../base/platform-control-plane
+
+# Apps-dev cluster overlay - minimal setup for workload cluster
+resources:
+  # Add tenant workloads and basic platform services as needed
+  - ../../base/kagent
+  - ../../base/kgateway-system
