--- a/kubernetes/namespaces/base/crossplane-system/compositions/kustomization.yaml
+++ b/kubernetes/namespaces/base/crossplane-system/compositions/kustomization.yaml
@@ -2,3 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  - cloudrun-composition.yaml
+  - cloudrun-xrd.yaml
+  - gke-cluster-composition.yaml
+  - gke-cluster-xrd.yaml
