--- a/kubernetes/namespaces/base/crossplane-system/kustomization.yaml
+++ b/kubernetes/namespaces/base/crossplane-system/kustomization.yaml
@@ -1,13 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+# Full crossplane system - for control-plane cluster
 resources:
   - compositions
   - environment-configs
   - functions
   - provider-configs
   - providers
-  - functions-kind
-  - providers-kind
-  - providerconfigs-kind
-  - install-kind
