--- a/kubernetes/namespaces/base/gkecluster-control-plane/workload-clusters/apps-dev/kustomization.yaml
+++ b/kubernetes/namespaces/base/gkecluster-control-plane/workload-clusters/apps-dev/kustomization.yaml
@@ -1,4 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 resources:
-  - ../../namespaces/overlays/apps-dev
+  - apps-dev-cluster.yaml
+  - apps-dev-namespace.yaml
