--- a/kubernetes/namespaces/overlays/kind/minimal-providers.yaml
+++ b/kubernetes/namespaces/overlays/kind/minimal-providers.yaml
@@ -1,3 +1,4 @@
+# Minimal providers for kind cluster - only essential ones for bootstrapping
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
@@ -11,4 +12,3 @@ metadata:
   name: provider-gcp-beta-container
 spec:
   package: xpkg.upbound.io/upbound/provider-gcp-beta-container:v0.5.1
-
