--- a/kubernetes/namespaces/base/crossplane-system/kustomization.yaml
+++ b/kubernetes/namespaces/base/crossplane-system/kustomization.yaml
@@ -1,10 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# Full crossplane system - for control-plane cluster
+# Full crossplane system - base components
 resources:
+  - install
   - compositions
   - environment-configs
   - functions
-  - provider-configs
+  - providerconfigs
   - providers
