--- a/kubernetes/namespaces/overlays/kind/minimal-functions.yaml
+++ b/kubernetes/namespaces/overlays/kind/minimal-functions.yaml
@@ -1,3 +1,4 @@
+# Minimal functions for kind cluster - only essential ones for cluster provisioning
 apiVersion: pkg.crossplane.io/v1beta1
 kind: Function
 metadata:
@@ -10,4 +11,4 @@ kind: Function
 metadata:
   name: function-auto-ready
 spec:
-  package: xpkg.crossplane.io/crossplane-contrib/function-auto-ready:v0.5.0
+  package: xpkg.crossplane.io/crossplane-contrib/function-auto-ready:v0.2.1
