--- a/kubernetes/clusters/kind/kustomization.yaml
+++ b/kubernetes/clusters/kind/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - flux-system
-  - ../../namespaces/overlays/kind
+  # Note: Crossplane components are installed via separate staged kustomizations
+  # in crossplane-source.yaml to ensure proper installation order
