--- a/kubernetes/namespaces/base/flux-system/crossplane-source.yaml
+++ b/kubernetes/namespaces/base/flux-system/crossplane-source.yaml
@@ -10,6 +10,7 @@ spec:
     branch: develop
   url: https://github.com/olga-mir/playground
 ---
+# Stage 1: Install Crossplane itself (Helm chart)
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -17,21 +18,28 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m
-  path: "./kubernetes/namespaces/base/crossplane-system/install-kind"
+  path: "./kubernetes/namespaces/base/crossplane-system/install"
   prune: true
   retryInterval: 2m
+  targetNamespace: crossplane-system
   sourceRef:
     kind: GitRepository
     name: crossplane-config
+  healthChecks:
+    - apiVersion: apps/v1
+      kind: Deployment
+      name: crossplane
+      namespace: crossplane-system
 ---
+# Stage 2: Install minimal providers for kind cluster
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: crossplane-providers
+  name: crossplane-providers-minimal
   namespace: flux-system
 spec:
   interval: 10m
-  path: "./kubernetes/namespaces/base/crossplane-system/providers-kind"
+  path: "./kubernetes/namespaces/base/crossplane-system/providers-minimal"
   prune: true
   retryInterval: 2m
   sourceRef:
@@ -44,22 +52,7 @@ spec:
       kind: CustomResourceDefinition
       name: providers.pkg.crossplane.io
 ---
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: crossplane-functions
-  namespace: flux-system
-spec:
-  interval: 10m
-  path: "./kubernetes/namespaces/base/crossplane-system/functions-kind"
-  prune: true
-  retryInterval: 2m
-  dependsOn:
-    - name: crossplane-install
-  sourceRef:
-    kind: GitRepository
-    name: crossplane-config
----
+# Stage 3: Install provider configs
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -67,14 +60,15 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m
-  path: "./kubernetes/namespaces/base/crossplane-system/providerconfigs-kind"
+  path: "./kubernetes/namespaces/base/crossplane-system/providerconfigs"
   prune: true
   retryInterval: 2m
+  targetNamespace: crossplane-system
   sourceRef:
     kind: GitRepository
     name: crossplane-config
   dependsOn:
-    - name: crossplane-providers
+    - name: crossplane-providers-minimal
   postBuild:
     substituteFrom:
       - kind: ConfigMap
@@ -82,6 +76,7 @@ spec:
       - kind: Secret
         name: platform-secrets
 ---
+# Stage 4: Install compositions and XRDs
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -96,8 +91,9 @@ spec:
     kind: GitRepository
     name: crossplane-config
   dependsOn:
-    - name: crossplane-functions
+    - name: crossplane-providerconfigs
 ---
+# Stage 5: Create control-plane cluster
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
