fix circular dependency and correctly point to overlays

--- a/kubernetes/namespaces/base/crossplane-system/providers-bootstrap/functions.yaml
+++ b/kubernetes/namespaces/base/crossplane-system/providers-bootstrap/functions.yaml
@@ -1,4 +1,4 @@
-# Minimal functions for kind cluster - only essential ones for cluster provisioning
+# Bootstrap functions for kind cluster - essential functions needed for GKE cluster provisioning
 apiVersion: pkg.crossplane.io/v1beta1
 kind: Function
 metadata:
