--- a/kubernetes/namespaces/base/flux-system/kustomization.yaml
+++ b/kubernetes/namespaces/base/flux-system/kustomization.yaml
@@ -4,4 +4,5 @@ kind: Kustomization
 resources:
   - crossplane-source.yaml
   - notification-provider.yaml
-  - platform-services
+  # Note: platform-services moved to staged Crossplane installation
+  # to avoid applying XRDs before Crossplane is ready
