--- a/kubernetes/namespaces/overlays/kind/kustomization.yaml
+++ b/kubernetes/namespaces/overlays/kind/kustomization.yaml
@@ -1,12 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# Kind cluster overlay - minimal crossplane + flux for bootstrapping
+# Kind cluster overlay - flux system with staged Crossplane installation
+# Note: Crossplane components (install, providers, compositions) are managed
+# by the staged Flux Kustomizations in flux-system/crossplane-source.yaml
 resources:
-  - ../../base/crossplane-system/install
-  - ../../base/crossplane-system/providerconfigs
-  - ../../base/crossplane-system/compositions
   - ../../base/flux-system
-  - ../../base/gkecluster-control-plane
-  - minimal-providers.yaml
-  - minimal-functions.yaml
