fix function auto ready version

--- a/.github/workflows/validate-kustomize.yml
+++ b/.github/workflows/validate-kustomize.yml
@@ -1,5 +1,7 @@
 name: Validate Kustomize Builds
 
+run-name: "${{ github.ref_name }} | ${{ github.event.head_commit.message }}"
+
 on:
   pull_request:
     paths:
